--- a/code/public/style.css
+++ b/code/public/style.css
@@ -25,7 +25,7 @@
 
 /* avatar picture styling */
 .avatar-styling {
-    @apply ring-primary ring-offset-base-100 w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 lg:w-72 lg:h-72 overflow-hidden mx-auto rounded-full ring ring-offset-2
+    @apply ring-secondary ring-offset-base-100 w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 lg:w-72 lg:h-72 overflow-hidden mx-auto rounded-full ring ring-offset-2
 }
 
 /* ____________TRANSITIONS____________ */
