--- a/code/public/style.css
+++ b/code/public/style.css
@@ -84,22 +84,20 @@ opacity: 1;
 /* ____________ANIMATIONS____________ */
 
 /*project filter*/
-.card[data-type] {
-    transition: opacity 0.5s ease, transform 0.5s ease;
-}
 .hide {
     opacity: 0;
     transform: scale(0.95);
     pointer-events: none;
-    height: 0; /* To collapse the space */
+    display: none;
     overflow: hidden;
 }
 .show {
     opacity: 1;
     transform: scale(1);
     pointer-events: auto;
-    height: auto; /* To expand the space */
+    display: flex;
 }
+
 
 /*animation pulse for avatar and social icons*/
 @keyframes pulse-avatar {
