--- a/code/public/style.css
+++ b/code/public/style.css
@@ -3,6 +3,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ___________IMPORT FONTS______________ */
+@font-face {
+    font-family: "notulenfont";
+    src: url("/code/public/fonts/notulen-serif-display-extra-bold.otf");
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "bellefairfont";
+    src: url("/code/public/fonts/Bellefair-Regular.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* ____________HTML STYLING_____________ */
+h1 {
+    font-family: "notulenfont" !important;
+}
+h2, h3, h4, p, a {
+    font-family: "bellefairfont" !important;
+}
+
 /* ____________CLASS STYLING____________ */
 
 /* social media icons styling */
@@ -20,12 +42,12 @@
 
 /* main link button */
 .btn-main {
-    @apply bg-secondary text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:btn-ghost hover:scale-105 transition-all duration-300
+    @apply btn bg-secondary text-lg text-white font-semibold py-3 px-8 hover:btn-primary hover:scale-105 transition-all duration-300
 }
 
 /* avatar picture styling */
 .avatar-styling {
-    @apply ring-secondary ring-offset-base-100 w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 lg:w-72 lg:h-72 overflow-hidden mx-auto rounded-full ring ring-offset-2
+    @apply ring-secondary ring-offset-base-100 w-40 h-40 sm:w-40 sm:h-40 md:w-56 md:h-56 lg:w-64 lg:h-64 overflow-hidden mx-auto rounded-full ring ring-offset-2
 }
 
 /* theme toggle positioning */
@@ -107,7 +129,6 @@ opacity: 1;
     }
 }
 .avatar-styling {
-    @apply ring-secondary ring-offset-base-100 w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 lg:w-72 lg:h-72 overflow-hidden mx-auto rounded-full ring ring-offset-2;
     animation: pulse-avatar 2s ease-in-out infinite;
 }
 .animated-icon {
