--- a/code/public/style.css
+++ b/code/public/style.css
@@ -25,6 +25,7 @@ h2, h3, h4, p, a {
     font-family: "bellefairfont" !important;
 }
 
+
 /* ____________CLASS STYLING____________ */
 
 /* social media icons styling */
@@ -48,6 +49,11 @@ h2, h3, h4, p, a {
 /* avatar picture styling */
 .avatar-styling {
     @apply ring-secondary ring-offset-base-100 w-40 h-40 sm:w-40 sm:h-40 md:w-56 md:h-56 lg:w-64 lg:h-64 overflow-hidden mx-auto rounded-full ring ring-offset-2
+}
+
+/* chat container */
+.chat-container {
+    @apply bg-base-100 space-y-4 outline outline-1 rounded-md outline-primary mb-2 p-4 overflow-y-auto max-h-96
 }
 
 /* theme toggle positioning */
